--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,11 @@ android {
         additionalParameters += '--set-max-idx-number=48000'
         additionalParameters += '--minimal-main-dex'
     }
+     configurations {
+        all { // You should exclude one of them not both of them
+            exclude group: "org.chromium.net", module: "cronet-embedded"
+        }
+    }
 }
 
 dependencies {
@@ -103,4 +108,15 @@ dependencies {
     implementation 'com.github.hedzr:android-file-chooser:v1.2.0-final'
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
+    //支持http3
+    implementation 'com.google.net.cronet:cronet-okhttp:0.1.0'
+//    implementation 'com.google.android.gms:play-services-cronet:18.0.1'
+    implementation files('libs/xwalk_shared_library-23.53.589.4.aar')
+    implementation 'org.chromium.net:cronet-embedded:101.4951.41'
+  //  implementation ('org.chromium.net:cronet-embedded:98.4758.101')
+}
+configurations {
+    all {
+        exclude group: 'org.chromium', module: 'base'
+    }
 }
